<resources>
    <string name="app_name">OneStopShop</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="title_home">Home</string>
    <string name="title_groceries">Groceries</string>
    <string name="title_settings">Settings</string>

    <string name="under_construction">This feature currently is under construction!</string>

    <!-- Used to parse grocery file data -->
    <string name="grocery_data_delimiter"> $ </string>

    <!-- Welcome Activity -->
    <string name="welcome_info">Setting up app for first time use...</string>
    <string name="welcome_info_complete">Complete!</string>
    <string name="next_button_text">Next</string>

    <!-- Log in Activity -->
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_button_text">Log In</string>
    <string name="register_button_text">Register</string>
    <string name="auth_fail_text">Incorrect credentials provided. Please try again.</string>
    <string name="invalid_login_fields">Please fill in all fields.</string>

    <!-- Registration Activity -->
    <string name="registration_header">Fill in the fields below</string>
    <string name="registration_complete_header">Registration Complete! Please return to the login page to sign in using your new account.</string>
    <string name="submit_button_text">Submit</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="return_button_text">Return</string>
    <string name="user_exists_error_message">Username already exists - </string>
    <string name="user_available_message">Username is available - </string>

    <!-- Home Fragment -->
    <string name="intro">Welcome </string>
    <string name="list_summary">total items:</string>
    <string name="edit_button_text">Edit</string>
    <string name="delete_button_text">Delete</string>
    <string name="delete_grocery_success">Successfully deleted grocery item</string>
    <string name="delete_grocery_fail">Failed to delete grocery item</string>

    <!-- Groceries Fragment -->
    <string name="add_button_text">Add</string>
    <string name="create_button_text">Create</string>
    <string name="groceries_header">Select an item below</string>
    <string name="add_grocery_success">Successfully added grocery</string>
    <string name="add_grocery_fail">Failed to add grocery</string>
    <string name="grocery_search_bar_hint">search for a grocery item</string>

    <!-- Settings Fragment -->
    <string name="reset_data_button_text">Clear Custom Groceries</string>
    <string name="duration_button_text">Notification Settings</string>
    <string name="dark_theme">dark theme</string>
</resources>
