<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.sdsu.cs.android.onestopshop.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_groceries"
        android:name="edu.sdsu.cs.android.onestopshop.ui.groceries.GroceriesFragment"
        android:label="@string/title_groceries"
        tools:layout="@layout/fragment_groceries" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="edu.sdsu.cs.android.onestopshop.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>